<resources>
    <string name="app_name">Pay Services Vendor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_services">Services</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_phone">Phone</string>
    <string name="label_password">Password</string>
    <string name="label_name">Your name</string>
    <string name="label_father_name">Father name</string>
    <string name="label_dob">DOB</string>
    <string name="label_otp">OTP</string>
    <string name="login">Login</string>
    <string name="request_otp">Request OTP</string>
    <string name="label_or">or</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="label_already_account">Already have an account?</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>
    <string name="u_sign_in"><u>Sign in</u></string>
    <string name="u_sign_up"><u>Sign UP</u></string>
    <string name="sign_in_component">SIGN_IN_COMPONENT</string>
    <string name="sign_up_component">SIGN_UP_COMPONENT</string>
    <string name="label_select_date">Select Date</string>
    <string name="label_select_address">Select Address</string>
    <string name="use_current_address">Use Current Address</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="label_address">Address</string>
    <string name="label_landmark">Landmark</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_pin_code">Pin code</string>
    <string name="label_personal_details">Personal Details</string>
    <string name="label_book_service">Book Service</string>
    <string name="label_waiting_for_location">Waiting for location</string>
    <string name="label_sending_top">Sending OTP…</string>
    <string name="label_signing_up">Signing up…</string>
    <string name="label_resetting_password">Resetting password …</string>
    <string name="label_logging_in">Signing in…</string>
    <string name="label_booking_service">Booking Service…</string>
    <string name="other_services_offer">Other Services We Offer!</string>
    <string name="every_re_text">Let\'s talk on your every requirements!</string>
    <string name="cancellation_reason">Tell us something about your requirements!</string>
    <string name="order_cancellation_reason">Please enter cancellation reason</string>
    <string name="order_comment_delay">Please enter reason behind delay</string>
    <string name="my_profile">My Profile</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_bookings">My Bookings</string>
    <string name="join_as_executive">Apply as Executive</string>
    <string name="label_logout">Logout</string>
    <string name="label_account_statements">Account Statements</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="address">Address: </string>
    <string name="pincode">PinCode:</string>
    <string name="landmark">Landmark:</string>
    <string name="city">City:</string>
    <string name="action_add_new_address">Add New Address</string>
    <string name="label_contact_no">Phone:</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_phone_no">+91-9251086410</string>
    <string name="label_email">support@payservice.in</string>
    <string name="label_email_input">Email</string>
    <string name="booking_status">Booking Status:</string>
    <string name="customer_mobile">Customer Mobile:</string>
    <string name="cancel_order"><u>Cancel Booking</u></string>
    <string name="date">Date:</string>
    <string name="service_name">Service Name</string>
    <string name="default_notification_channel_id">default</string>
    <string name="accept_order">Accept Booking</string>
    <string name="reject_order">Reject</string>
    <string name="label_refresh">Refresh Bookings</string>
    <string name="label_my_profile">My Profile</string>
    <string name="no_bookings_found">No Bookings Found</string>
    <string name="complete_order">Complete Order</string>
    <string name="mark_payment_receive">Mark Payment Receive</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="tab_text_1">Pending</string>
    <string name="tab_text_2">Running</string>
    <string name="tab_text_3">Completed</string>
    <string name="label_alternate_mobile">Alternate Mobile</string>
    <string name="label_current_address">Current Address</string>
    <string name="label_permanent_address">Permanent Address</string>
    <string name="label_village">Village</string>
    <string name="label_tehsil_town">Tehsil/Town</string>
    <string name="label_district">District</string>
    <string name="label_documentation">Documentation</string>
    <string name="label_aadhar">Aadhar Card</string>
    <string name="label_dl">Driving License</string>
    <string name="label_pan">Pan Card</string>
    <string name="label_photo">Photo</string>
    <string name="label_cancel_cheque">Cancelled Cheque</string>
    <string name="label_signature">Signature</string>
    <string name="label_insurance_doc">Insurance Document</string>
    <string name="label_qualification">Qualifications</string>
    <string name="label_tenth">10th</string>
    <string name="label_twelve">12th</string>
    <string name="label_diploma">Diploma</string>
    <string name="label_other">Other</string>
    <string name="label_submit">Submit</string>
    <string name="connection_error">No internet connection</string>
    <string name="error_empty_fields">Fields cannot be empty</string>
    <string name="error_storage_permission">Storage permission require</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="label_product_detail">Items Detail</string>
    <string name="label_product_photo">Photo</string>
    <string name="label_product_name">Name</string>
    <string name="label_product_cost">Cost</string>
    <string name="label_add_more">Add new item</string>
    <string name="empty"></string>
    <string name="label_next">Next</string>
    <string name="visiting_charges">Visiting Charges</string>
    <string name="service_charges">Service Charges</string>
    <string name="label_charge_types">Charge Type</string>
    <string name="label_bookings_has_items">Add Items</string>
    <string name="label_complete_order">Complete Order</string>
    <string name="label_main_image">Main Image</string>
    <string name="label_serial_number">Serial-Model Number</string>
    <string name="charge_type_error">Charge type is required</string>
    <string name="pay_entry_fee">Pay Membership Fee</string>
    <string name="add_wallet_balance">Add Wallet Balance</string>
    <string name="select_service">Select Services</string>
    <string name="enter_amount_for_recharge">Enter amount for recharge</string>
    <string name="label_wallet_balance">Wallet Balance</string>
    <string name="label_rs_sym">\u20B9</string>
    <string name="label_tandc">I agree to the</string>
    <string name="label_tandc_2"> <u>Terms and Conditions</u></string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_reset"><u>Reset Here</u></string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_know_password">Know your password?</string>
    <string name="label_send_otp">Send OTP</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string-array name="image_chooser">
        <item>Take from camera</item>
        <item>Choose from gallery</item>
    </string-array>
    <string name="placeholder">Placeholder</string>
    <string name="why_pending">Pending?</string>
    <string name="calculate_estimate"><u>Calculate Estimate</u></string>
    <string name="order_number">Order#</string>
    <string name="order_amount">Order Amount:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="amount">Total Debit Amount:</string>
    <string name="credit_amount">Credit Amount:</string>
    <string name="label_order_date">Completion Date:</string>
    <string name="label_credit_date">Credit Date:</string>
    <string name="service_charge">Service Charge:</string>
    <string name="label_convenience_fee">Convenience Fee:</string>
    <string name="label_cgst_sgst">CGST (9%) + SGST (9%):</string>
</resources>