<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/label_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_my_profile"
        android:icon="@drawable/ic_refresh"
        android:title="@string/label_my_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_account_statements"
        android:title="@string/label_account_statements"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_refresh"
        android:title="@string/label_logout"
        app:showAsAction="never"/>
</menu>