<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/service_item_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/service_name"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/service_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/service_date_wrapper"
        app:layout_constraintTop_toBottomOf="@id/service_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
        <TextView
            android:id="@+id/service_date"
            android:text="@string/placeholder"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/address_wrapper"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/service_date_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />
        <TextView
            android:id="@+id/address"
            android:text="@string/placeholder"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/order_status_wrapper"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/address_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_status" />
        <TextView
            android:id="@+id/booking_status"
            android:text="@string/placeholder"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/customer_detail_wrapper"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/order_status_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_mobile" />
        <TextView
            android:id="@+id/customer_name_mobile"
            android:linksClickable="true"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:autoLink="phone"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_phone" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customer_detail_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/accept_order"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:text="@string/accept_order"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/btn_accept_bg"
            android:layout_height="38dp" />
        <Button
            android:id="@+id/complete_order"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/complete_order"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_complete_order_bg"
            android:layout_height="38dp" />
        <Button
            android:id="@+id/mark_payment"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/mark_payment_receive"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_mark_payment_bg"
            android:layout_height="38dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/comment_order"
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/why_pending"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_mark_payment_bg"
            android:layout_height="38dp"
            android:visibility="gone"/>
    </LinearLayout>
    <View
        android:id="@+id/color_indicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="0dp"
        android:layout_width="5dp" />
</androidx.constraintlayout.widget.ConstraintLayout>