<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_delete"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_product_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_address"
            android:hint="@string/label_product_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"
            android:layout_marginEnd="4dp"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/ed_product_cost"
            android:layout_marginStart="4dp"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_address"
            android:hint="@string/label_product_cost"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="number"
            android:imeOptions="actionNext" />
    </LinearLayout>


    <TextView
        android:textSize="17sp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_product_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <FrameLayout
        android:layout_marginEnd="3dp"
        android:layout_width="180dp"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/product_photo"
            android:background="@drawable/edit_text_address"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="match_parent"/>
        <ImageView
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/ic_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorAccent" />
    </FrameLayout>

</LinearLayout>